<resources>
    <string name="app_name">Loa</string>

    <string-array name="types">
        <item>Type</item>
        <item>Santi</item>
        <item>Mercaderia</item>
        <item>Sueldo</item>
        <item>Otro</item>
    </string-array>

    <!--menu ingresos-->
    <string name="MENU_INGRESO_COMPRA">Ingreso compra</string>
    <string name="MENU_INGRESO_DEVOLUCION">Ingreso por cambio</string>
    <string name="MENU_INGRESO_DEVOLUCION_FALLA">Ingreso devolucion falla</string>
    <string name="MENU_INGRESO_ERROR_ANTERIOR">Ingreso por error anterior</string>
    <string name="MENU_INGRESO_ACTUALIZACION_APP">Ingreso actualizacion app</string>
    <string name="MENU_INGRESO_CONSIGNACION">Ingreso consignacion</string>
    <string name="MENU_INGRESO_BALANCE_STOCK">Ingreso balance stock</string>

    <string name="MENU_INGRESO_DEVOLUCION_LUZ">Ingreso stock luz</string>
    <string name="MENU_INGRESO_STOCK_OFERTA">Ingreso stock oferta</string>
    <string name="MENU_INGRESO_STOCK_LOCAL">Ingreso stock local</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
