<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/in_dev"
        android:title="@string/MENU_INGRESO_DEVOLUCION"
        android:icon="@android:drawable/ic_menu_recent_history"/>

    <item
        android:id="@+id/in_dev_wrong"
        android:title="@string/MENU_INGRESO_DEVOLUCION_FALLA"
        />
    <item android:id="@+id/in_error"
        android:title="@string/MENU_INGRESO_ERROR_ANTERIOR"
        android:icon="@android:drawable/ic_menu_delete"/>



</menu>
<!--

  <item
        android:id="@+id/in_update_app"
        android:visible="false"
        android:title="@string/MENU_INGRESO_ACTUALIZACION_APP"
        />

   <item
        android:id="@+id/in_consign"
        android:visible="false"
        android:title="@string/MENU_INGRESO_CONSIGNACION"
        />
    <item android:id="@+id/in_balance_stock"
        android:visible="false"
        android:title="@string/MENU_INGRESO_BALANCE_STOCK"
        android:icon="@android:drawable/ic_menu_delete"/>
    <item
        android:id="@+id/in_dev_luz"
        android:visible="false"
        android:title="@string/MENU_INGRESO_DEVOLUCION_LUZ"
        />
    <item
        android:id="@+id/in_stock_oferta"
        android:visible="false"
        android:title="@string/MENU_INGRESO_STOCK_OFERTA"
        />
    <item
        android:id="@+id/in_stock_local"
        android:visible="false"
        android:title="@string/MENU_INGRESO_STOCK_LOCAL"
        />


-->